fix(Header.css): update border color for improved visibility

--- a/inflearn/onebite-react/emotion-diary/src/components/Header.css
+++ b/inflearn/onebite-react/emotion-diary/src/components/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   padding: 20px 0;
-  border-bottom: 1px solid rgb(256, 256, 256);
+  border-bottom: 1px solid rgb(236, 236, 236);
 }
 
 .Header > div {
